feat: add API echo
