# docs/swagger.json
@@ -8,6 +8,38 @@
     },
     "basePath": "/",
     "paths": {
+        "/api/echo": {
+            "post": {
+                "description": "echo the request.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "echo"
+                ],
+                "summary": "Echo",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {}
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/health": {
             "get": {
                 "description": "get the status of server.",
@@ -25,7 +57,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Health"
+                            "$ref": "#/definitions/model.Response"
                         }
                     }
                 }
@@ -56,17 +88,6 @@
         }
     },
     "definitions": {
-        "model.Health": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
         "model.Response": {
             "type": "object",
             "properties": {
@@ -74,7 +95,7 @@
                 "message": {
                     "type": "string"
                 },
-                "status": {
+                "success": {
                     "type": "boolean"
                 }
             }
